--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "Colins-Blog",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "description": "Colins Blog",
   "keywords": [
     "OpenShift",
     "Node.js",
@@ -9,14 +9,14 @@
     "openshift"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Colin Alford",
+    "email": "colinalford@gmail.com",
+    "url": "http://www.colinalford.com/"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://www.colinalford.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "url": "https://github.com/cralford21/blog2"
   },
 
   "engines": {
@@ -25,11 +25,26 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
-  },
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "express-session": "1.11.3",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
+    "connect-flash": "0.1.1",
+    "passport" : "0.2.2",
+    "passport-local" : "1.0.0",
+    "mongoose" : "4.0.7",
+    "bcrypt-nodejs" : "latest"},
+
   "devDependencies": {},
   "bundleDependencies": [],
 
   "private": true,
-  "main": "server.js"
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "main": "./bin/www"
 }
